<resources>
    <string name="app_name">FinalArchitecture</string>
    <string name="enter_now">立即进入</string>

    <string name="home">首页</string>
    <string name="system">体系</string>
    <string name="discovery">发现</string>
    <string name="toolbox">工具</string>
    <string name="mine">我的</string>

    <string name="description_confirm">确定</string>

    <string name="search_hint">搜索关键词以空格隔开</string>
    <string name="fuck_bitch">我偷偷对着前台黑丝小妹猛冲</string>
    <string name="tab">("文章", "广场", "问答", "项目","微信"</string>
    <string name="search">搜索</string>
    <string name="top_article">置顶</string>
    <string name="new_article">新</string>
    <string name="new_ask">问答</string>
    <string name="send_to_plaza">发表文章到广场</string>
    <string name="love">我爱你</string>

    <string name="multi_list_title">多列表样式</string>
    <string name="multi_list_expand_title">推荐新闻</string>
    <string name="multi_list_expand_des">展开</string>
    <string name="multi_list_collapse_des">折叠</string>

    <string name="hint_search_des">输入搜索的关键词</string>
    <string name="search_hot_des">热门搜索</string>
    <string name="search_history_des">历史搜索</string>

    <string name="description_app_integral">我的积分</string>
    <string name="description_app_collect">我的收藏</string>
    <string name="description_app_share">我的分享</string>
    <string name="description_app_read_record">阅读历史</string>
    <string name="description_app_read_later">稍后阅读</string>
    <string name="description_app_open_project">开源项目</string>
    <string name="description_app_about_we">关于作者</string>
    <string name="description_app_setting">系统设置</string>
    <string name="description_app_version">当前版本</string>
    <string name="description_app_theme_change">主题设置</string>
    <string name="description_app_exit">退出当前账号</string>

    <!-- 登录 -->
    <string name="description_login">登录</string>
    <string name="description_login_account_hint">请输入账号</string>
    <string name="description_login_password_hint">请输入密码</string>
    <string name="description_login_password_again_hint">请再次输入密码</string>
    <string name="description_login_next_step">下一步</string>
    <string name="description_login_success">登录成功</string>
    <string name="description_not_login_tip">点击登录</string>

    <string name="description_register">注册</string>
    <string name="description_register_success">注册成功</string>

    <!-- 文件选择树 -->
    <string name="description_already_tree">已经包含了该文件夹</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="shopping_cart_title">购物车</string>
    <string name="shopping_cart_select_num">已选择 %d 样</string>

    <!-- 我的 -->
    <string name="me_my_coin_num">等级:%s | 排名:%s</string>
    <string name="me_app_author">ZJL</string>
    <string name="my_rank_integral">当前积分</string>
    <string name="my_rank_coin">当前积分:%s</string>
    <string name="me_app_github_url">https://github.com/XiaocXC/FinalArchitecture</string>
    <string name="my_rank">积分排行</string>

    <!-- 设置 -->
    <string name="key_preference_about">aboutApp</string>
    <string name="key_preference_github_website">codeGithub</string>
    <string name="key_preference_sign_out">signOut</string>
    <string name="preference_category_others">其他</string>
    <string name="preference_title_about">关于</string>
    <string name="preference_title_home_website">源代码</string>
    <string name="preference_sign_out">退出登录</string>
    <string name="description_sign_out_success">退出登录成功</string>
    <string name="description_system_tab">体系导航</string>
    <string name="description_sign_out_des_dialog">您确定要退出登录吗？</string>

    <string name="tip_message_to_login">请您先登录</string>

</resources>