<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="othersCategory"
        app:title="@string/preference_category_others">

        <Preference
            app:icon="@mipmap/ic_launcher"
            app:key="@string/key_preference_about"
            app:title="@string/preference_title_about" />

        <Preference
            app:key="@string/key_preference_github_website"
            app:summary="https://github.com/XiaocXC/FinalArchitecture"
            app:title="@string/preference_title_home_website" />

        <Preference
            app:key="@string/key_preference_sign_out"
            app:layout="@layout/preference_logout_layout"
            app:title="@string/preference_sign_out" />

    </PreferenceCategory>
</PreferenceScreen>