<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/item_project_toplinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_project_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_panda"
                android:textSize="13sp"
                tools:text="有何高见" />

            <TextView
                android:id="@+id/item_project_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/title_lable_shape"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/top_article"
                android:textColor="@android:color/holo_red_light"
                android:textSize="11sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/item_project_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/title_lable_shape"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/new_article"
                android:visibility="gone"
                android:textColor="@android:color/holo_red_light"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/item_project_type1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/title_lable_shape2"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/new_ask"
                android:textColor="@color/base_blue_100"
                android:textSize="11sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/item_project_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_panda"
                android:textSize="13sp"
                tools:text="1小时前" />
        </LinearLayout>


        <TextView
            android:id="@+id/item_project_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/base_panda"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="这是一个菜的扣jio的人写的项目" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_project_type2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_black45"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:textSize="13sp"
                tools:text="分类·项目" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/item_project_collect"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/collect_selector" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>


