<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/item_project_toplinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_project_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_panda"
                android:textSize="13sp"
                tools:text="有何高见" />

            <TextView
                android:id="@+id/item_project_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/title_lable_shape"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/top_article"
                android:textColor="@android:color/holo_red_light"
                android:textSize="11sp"
                android:visibility="gone"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/item_project_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/title_lable_shape"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/new_article"
                android:textColor="@android:color/holo_red_light"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/item_project_type1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/title_lable_shape2"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/new_ask"
                android:textColor="@color/base_blue_100"
                android:textSize="11sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/item_home_date"
                tools:text="1小时前"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_panda"
                android:textSize="13sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_project_imageview"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:background="@color/base_white95"
                android:scaleType="centerCrop"
                tools:srcCompat="@drawable/default_project_img" />

            <TextView
                android:id="@+id/item_project_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="7dp"
                android:layout_toEndOf="@+id/item_project_imageview"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/base_panda"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="这是一个菜的扣jio的人写的项目" />

            <TextView
                android:id="@+id/item_project_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_project_title"
                android:layout_marginHorizontal="10dp"
                android:layout_toEndOf="@+id/item_project_imageview"
                android:ellipsize="end"
                android:includeFontPadding="true"
                android:lineSpacingMultiplier="1.4"
                android:maxLines="3"
                android:textColor="@color/base_panda"
                android:textSize="13sp"
                tools:text="一个Jetpack结合MVVM的快速开发框架，基于MVVM模式集成谷歌官方推荐的JetPack组件库：LiveData、ViewModel、Lifecycle组件 使用Kotlin语言，添加大量拓展函数，简化代码 加入Retrofit网络请求,协程，帮你简化各种操作，让你快速开发项目" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/item_home_type2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:textColor="@color/base_black45"
                android:textSize="13sp"
                tools:text="分类·项目" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/item_home_collect"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/collect_selector" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>


